# synapse-protocol

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/api/: endpoints.md  events.md  messages.md
docs/architecture/: 01_overview.md  02_components.md  03_communication.md  04_state_machine.md  05_orchestrator.md  06_supervision.md
docs/design/: decisions.md  philosophy.md  security.md
docs/guides/: configuration.md  deployment.md  installation.md  quickstart.md
levo-plus-backend/src/: main.py
levo-plus-backend/src/models/: __init__.py  chat.py  delivery.py  user.py
levo-plus-backend/src/routes/: chat.py  delivery.py  user.py
levo-plus-backend/src/static/: index.html
levo-plus-frontend/: index.html  package-lock.json  package.json
levo-plus-frontend/src/: App.css  App.jsx
levo-plus-frontend/src/components/: Chat.jsx  ClientDashboard.jsx  DeliveryHistory.jsx  DeliveryPersonDashboard.jsx  DeliveryRequest.jsx  DeliveryTracking.jsx  EarningsPanel.jsx  LoginPage.jsx
synapse/: __init__.py  bridge.py  config.py  email_sender.py  executor.py  interfaces.py  journal.py  messages.py  notifications.py  redis_client.py  routes.py  session.py  supervisor_listener.py  synapse.example.yaml  synapse_orchestrator.py
synapse/tests/: conftest.py  test_journal.py  test_messages.py  test_notifications.py  test_orchestrator.py  test_session.py
